# siemens_experimental

siemens_cp1616/: CMakeLists.txt  package.xml
siemens_cp1616/include/siemens_cp1616/: io_controller.h  io_controller_callbacks.h  io_device.h  io_device_callbacks.h
siemens_cp1616/launch/: test_io_controller.launch  test_io_device.launch
siemens_cp1616/src/: io_controller.cpp  io_controller_callbacks.cpp  io_controller_wrapper.cpp  io_device.cpp  io_device_callbacks.cpp  io_device_wrapper.cpp
